--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "axios": "^0.27.2",
     "chart.js": "^4.3.0",
     "chartjs-adapter-date-fns": "^3.0.0",
-    "date-fns":"^^2.30.0",
+    "date-fns":"^2.30.0",
     "dayjs": "^1.11.7",
     "emoji-mart": "3.0.1",
     "moment": "^2.29.3",
