--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://meta-eta.vercel.app/",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^34.2.0",
     "@ckeditor/ckeditor5-react": "^5.0.2",
@@ -44,7 +45,8 @@
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.6.2",
     "tsparticles": "^2.9.3",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "http-proxy-middleware": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
